[gd_scene load_steps=14 format=2]

[ext_resource path="res://PlacehoolderSprites/BG1.png" type="Texture" id=1]
[ext_resource path="res://ObjectScenes/BackButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://ObjectScenes/InOverlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://DisplayScenes/QuizMenu.gd" type="Script" id=4]
[ext_resource path="res://Fonts/DynamicFonts/ClothesEnglish.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/Buttons/QuizCHover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/QuizA.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/QuizAHover.png" type="Texture" id=8]
[ext_resource path="res://Fonts/ProductSans-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Sprites/Buttons/QuizB.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Buttons/QuizBHover.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Buttons/QuizC.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_size = 2
outline_color = Color( 0.313726, 0.6, 0.835294, 1 )
font_data = ExtResource( 9 )

[node name="QuizMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -529.0
margin_top = -291.5
margin_right = 529.0
margin_bottom = 291.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1058.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 5 )
text = "Quiz Time!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 1058.0
margin_bottom = 583.0
alignment = 1

[node name="QuizA" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 177.0
margin_right = 527.0
margin_bottom = 500.0
rect_min_size = Vector2( 350, 500 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="QuizB" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 354.0
margin_right = 704.0
margin_bottom = 500.0
rect_min_size = Vector2( 350, 500 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true
stretch_mode = 3

[node name="QuizC" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 531.0
margin_right = 881.0
margin_bottom = 500.0
rect_min_size = Vector2( 350, 500 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Limiter" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -348.0
margin_top = -50.0
margin_right = -26.0
margin_bottom = -16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Batasi Jumlah Pertanyaan: ON"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 2 )]
targetScene = "MainMenu"

[node name="Overlay" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="button_down" from="VBoxContainer/HBoxContainer/QuizA" to="." method="_on_QuizA_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/QuizB" to="." method="_on_QuizB_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/QuizC" to="." method="_on_QuizC_button_down"]
[connection signal="button_down" from="Limiter" to="." method="_on_Limiter_button_down"]
